# cpf-val

./: .gitignore  Cargo.toml  LICENSE  README.md  run.ps1  run.sh
res/: ValidateCpfs.cbl
src/: main.rs
