[package]
authors = ["Vanius Roberto Bittencourt <vanius@gmail.com>"]
edition = "2018"
name = "cpf_val"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
